implementados testes unitarios